--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "scripts": {},
   "type": "module",
   "dependencies": {
-    "@yourdash/backend": "link:C:/Users/ewsgi/projects/instance/backend"
+    "@yourdash/backend": "link:C:/Users/ewsgi/projects/instance/backend",
+    "zod": "^3.24.2"
   }
 }
