--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,8 @@
     "vite": "^6.2.0",
     "vite-plugin-dynamic-import": "^1.6.0",
     "vite-plugin-lib-inject-css": "^2.2.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "sass-embedded": "^1.86.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.8",
