--- a/web/package.json
+++ b/web/package.json
@@ -17,18 +17,18 @@
   ],
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "@yourdash/web": "link:C:/Users/ewsgi/projects/instance/web",
-    "@yourdash/uikit": "^0.1.4",
     "@yourdash/tunnel": "^0.1.4",
+    "@yourdash/uikit": "^0.1.4",
+    "@yourdash/web": "link:C:/Users/ewsgi/projects/yourdash/instance/web",
     "animate.css": "^4.1.1",
     "babel-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
     "glob": "^11.0.1",
     "npm-run-all": "^4.1.5",
+    "sass-embedded": "^1.86.0",
     "vite": "^6.2.0",
     "vite-plugin-dynamic-import": "^1.6.0",
     "vite-plugin-lib-inject-css": "^2.2.1",
-    "zod": "^3.24.2",
-    "sass-embedded": "^1.86.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.8",
